1998-03-31  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (AC_REPLACE_FUNCS): Look for vasprintf.

Thu Mar 19 23:23:30 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome.m4: An empty true branch of an `if' statement is not valid
	sh syntax.  If GNOME_INIT_HOOK argument $1 is empty, use ":"
	instead.

1998-03-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome.m4 (GNOME_INIT_HOOK): Provide a way to hook some code to
	execute;  Accept a probe mode.
	
	(GNOME_INIT): Define in terms of GNOME_INIT_HOOK.

Thu Mar 19 00:17:46 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Cache results of check for
	program_invocation_short_name, program_invocation_name.  Check to
	make sure argp functions are in a library.

	* gnome-support.m4: Cache results of argp check.

Sun Mar 15 15:54:43 1998  Owen Taylor  <owt1@cornell.edu>

	* gnome-x-checks.m4: Replaced checks for X and GTK
	with AM_PATH_GTK. x_include, X_LIBS, etc, variables no longer
	defined.

1998-03-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Add a check for <linewrap.h> -- this enables
	some optimizations when compiling `argp'.

Mon Mar  9 19:32:42 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Build vsnprintf.o, not vsnprint.o.

1998-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Add check for `vsnprintf'.

Sun Mar  8 17:04:28 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Set need_gnome_support shell variable.  Define
	BUILD_GNOME_SUPPORT automake conditional.  Define LTLIBOBJS.  Look
	for argp_domain element in struct argp.

Sat Mar  7 00:04:22 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Add argp-pvh.o to
	LIBOBJS.

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Check for strnlen().

Wed Mar  4 01:02:55 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Check for argp code,
	strndup, program_invocation_name, program_invocation_short_name.
