@@ -1,3 +1,8 @@
+1998-04-08  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* autogen.sh: Update to list newer versions of packages.
+	* gnome-support.m4 (AC_REPLACE_FUNCS): Add `scandir'.
+
 1998-03-31  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnome-support.m4 (AC_REPLACE_FUNCS): Look for vasprintf.
